# vision

./: .clangd  .dockerignore  .gitignore  .gitlab-ci.yml  .lenv.yml  CMakeLists.txt  Dockerfile  Doxygen  Makefile  README.md  api.py  build.sh  click.cpp  cmake_install  config.yml  create_tables.sql  deploy  deploy.sh  deployment.yaml  docker-compose-bac.yml  docker-compose.yml  init.lua  kafka.c  lenv.yml  loader.py  main.c  main.cpp  playbook.yml  pq.c  process.yml  request.json  run.sh  upload.py  values.yaml  vision.hpp
.ansible/: init.lua  inventory.yaml  main.yml  playbook.yml  tarantool.service
.ansible/tasks/: install.yml
.ci/: deployment.yaml  ingress.yaml  k8s.yml  playbook.yml  service.yaml  values.yaml
.ci/manifests/: manifests.yaml
.ci/playbooks/: application.yml  swagger.yml  tarantool.yml
.ci/templates/: NOTES.txt  deployment.yaml
.circleci/: config.yml
.github/workflows/: pipeline.yml  workflow.yml
.tnt/: deployment.yaml  pvc.yaml  service.yaml
doxygen/: Doxygen  Makefile  main.go
doxygen/css/: doxygen-awesome.css
include/: vision.h
prometheus/: prometheus.yml
research/: a.out  main.cpp  num.cpp  prom.cpp  test.cpp
sql/: migrations.sql
src/: account.cpp  api.c  api.cpp  array.c  config.cpp  crypto.cpp  crypto.hpp  csv.hpp  httpserver.h  kafka.c  kafka.hpp  lib.hpp  logger.c  repository.cpp  scaner.hpp  search.c  serdes.hpp  structs.hpp  tarantool.c  test.cpp  vision.c  vision.cpp  vision.h  vision.hpp  visioner.cpp  workflow.cpp  zmq.c
src-old/: crypto.cpp  repository.cpp
swagger/: Dockerfile  swagger.yml
